# watchx

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists.txt.old  Makefile  README.md  arm_toolchain.cmake  cppcheck_report.xml  nrf52_linkerscript.ld  nrf52_nosd_linkerscript.ld  nrf_helper_files.bat
.github/workflows/: cmake-multi-platform.yml
doc/Tests/: python_gfx_test.md
python/: gfx_tool.py  img_cnv.py  logger_test.py  py_logs.py  temp.py  test_app.py
src/config/: FreeRTOSConfig.h  ble_config.h  ble_stack_config.h  crypto_config.h  nrf_custom_log.h  sdk_config.h  sys_config.h
src/examples/: freertos.c  test_firmware.c
src/libs/components/ble/ble_ams/: ble_ams.c  ble_ams.h  ble_ams_evt_handler.c
src/libs/components/ble/ble_ancs/: ble_ancs.c  ble_ancs.h  ble_ancs_evt_handler.c
src/libs/components/ble/ble_gap/: ble_gap.c  ble_gap_advertise.c  ble_gap_event_handler.c  ble_gap_func.h  ble_gap_security_handler.c
src/libs/components/ble/ble_gatt_client/: ble_gatt_client.c  ble_gatt_client.h  ble_gatt_client_evt_handler.c
src/libs/components/ble/ble_gatt_server/: ble_gatt_server.c  ble_gatt_server.h  ble_gatt_server_evt_handler.c
src/libs/components/ble/ble_peer_device_info/: ble_peer_info.c  ble_peer_info.h
src/libs/components/ble/ble_stack_init/: ble_softdevice_init.c  ble_softdevice_init.h  ble_softdevice_util.c  ble_softdevice_util.h
src/libs/components/ble/ble_task/: ble_common_task.h  ble_task.c
src/libs/components/ble/ble_time/: ble_current_time.c  ble_current_time.h
src/libs/components/devices/accelrometer/: nrf_accelrometer.c  nrf_accelromter.h
src/libs/components/devices/button/: nrf_button.c  nrf_button.h
src/libs/components/kernel/app_scheduler/: kernel_app_sched.h  kernel_thread_mang.h
src/libs/components/kernel/device_drivers/accelrometer/: adxl345_lib.c  adxl345_lib.h  nrf_accelrometer.c  nrf_accelromter.h
src/libs/components/kernel/device_drivers/button/: nrf_button.c  nrf_button.h
src/libs/components/kernel/device_drivers/display/: nrf_gfx.c  nrf_gfx.h  nrf_gfx_fonts.c  nrf_gfx_fonts.h  nrf_gfx_ui.h  nrf_gfx_ui_screens.c  nrf_oled_driver.c  nrf_oled_driver.h
src/libs/components/kernel/device_drivers/drivers_common/: drivers_common.c  drivers_common.h
src/libs/components/kernel/kernel_task/: ble_common_task.h  ble_task.c  kernel_task.c  kernel_task.h
src/libs/components/kernel/memory_manager/: kernel_fifo.c  kernel_fifo.h  kernel_link_list.c  kernel_link_list.h  kernel_mem_manager.c  kernel_mem_manager.h  kernel_queue.c  kernel_queue.h
src/libs/components/kernel/time/: kernel_time.c
src/libs/components/kernel/time_manager/: kernel_time.c  kernel_time.h
src/libs/nrf_HAL/ARM_CM4_MPU/: arm_mpu.c  arm_mpu.h
src/libs/nrf_HAL/Memory_watch_unit/: nrf_MWU.h
src/libs/nrf_HAL/adc/: adc.c  adc.h
src/libs/nrf_HAL/bprot/: bprot.c  bprot.h
src/libs/nrf_HAL/flash/: flash_write.c  flash_write.h
src/libs/nrf_HAL/freertos_addition/: static_func_support.c
src/libs/nrf_HAL/gpio/: gpio.c  gpio.h  gpiote.c  gpiote.h
src/libs/nrf_HAL/i2c/: i2c.c  i2c.h  i2c_thread_safe.c  i2c_thread_safe.h
src/libs/nrf_HAL/nvs/: nvs.c  nvs.h  nvs_ota.c
src/libs/nrf_HAL/ppi/: ppi.c  ppi.h
src/libs/nrf_HAL/pwm/: nrf_pwm.c  nrf_pwm.h
src/libs/nrf_HAL/rng/: nrf_ran_gen.h  nrf_rng.c
src/libs/nrf_HAL/rtc/: RTC_timer.h  nrf_rtc.c  nrf_rtc.h  rtc_timer.c
src/libs/nrf_HAL/spi/: spi.c  spi.h  spi_thread_safe.c  spi_thread_safe.h
src/libs/nrf_HAL/startup/: gcc_startup_nrf52.S  system_nrf52.c
src/libs/nrf_HAL/system/: nrf_err_types.h  sys_calls.c  sysmem.c  system.c  system.h
src/libs/nrf_HAL/timer/: nrf_time.c  nrf_time.h  timer.c  timer.h
src/libs/nrf_HAL/uart/: ansii_color_codes.h  logger.c  logger.h  uart_drv.c  uart_drv.h  uart_logs.c  uart_logs.h
src/libs/nrf_HAL/watchdog/: watchdog.c  watchdog.h
src/main/: kernel_task.c  kernel_task.h  main.c  main_helper.c  main_helper.h
src/main/app_scheduler/: app_scheduler.c  app_scheduler.h  kernel_app_sched.h  kernel_thread_mang.c
src/main/apps/homescreen/: app_homescreen.c  app_homescreen.h
src/tests/: CMakeLists.txt
src/tests/examples/: linlist_test.c  uart.c
src/tests/nrf_gfx/: python_gfx.c
tests/: CMakeLists.txt
tests/examples/: block_protect.c  gpio_and_gpiote.c  test_kernel_mem_manage.c  test_kernel_q.c  timer_ppi_gpiote.c
tests/nrf_gfx/: python_gfx.c
tests/test/: main.c  test_logger.c
watchx_issues/: Watchxtodo.md  apps.md  ble_library.md  driver.md  kernel.md  nrf_hal_lib.md
